--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,56 @@
 <form action="https://api.sheetmonkey.io/form/nGaAXQvCr7tTx9iyCS46mq" method="post">
-    <label>Your Name: <input type="text" name="Name" required /></label>
+    <label>Your Name: <input type="text" name="Name" required /></label><br>
     <label>Your Email: <input type="email" name="Email" required /></label>
     <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
     <input type="hidden" name="x-sheetmonkey-redirect" value="https://www.microsoft.com" />
     <input type="submit" value="Sign Up" />
   </form>
+
+  <form method="post" action="https://api.sheetmonkey.io/form/3bdCQsFDMzWHpG91tbS9mG" autoComplete="on" class="sm__form">
+    <div class="sm__form__fields">
+        <div class="sm-form-title">
+            <h2 class="sm-form-title__header">Customer Support</h2>
+        </div>
+            <div class="sm-field__wrapper">
+                <div class="sm-field__wrapper__inside">
+                    <div class="sm-field sm-field-text sm-field--large">
+                        <label class="sm-field__label" for="sm-field-0IwBqvH9Rk">Your Name   </label>
+                        <input type="text" class="sm-field__input sm-field__input--text" id="sm-field-0IwBqvH9Rk" name="Name" placeholder="First &amp; Last Name"/>
+                    </div>
+                </div>
+            </div>
+            <div class="sm-field__wrapper">
+                <div class="sm-field__wrapper__inside">
+                    <div class="sm-field sm-field--email sm-field--large">
+                        <label class="sm-field__label" for="sm-field-e0ywe4sp0g">Your Email   </label>
+                        <input type="email" class="sm-field__input sm-field__input--text" id="sm-field-e0ywe4sp0g" name="Email" placeholder="email@domain.com" autoComplete="email"/>
+                    </div>
+                </div>
+            </div>
+            <div class="sm-field__wrapper">
+                <div class="sm-field__wrapper__inside">
+                    <div class="sm-field sm-field--large">
+                        <label class="sm-field__label" for="sm-field-3eNKoQrREF">Severity   <strong style="color:red">*</strong></label>
+                        <div class="sm-choice-select"><select name="Severity" class="sm-field__select" id="sm-field-3eNKoQrREF">
+                            <option value="P1">P1</option>
+                            <option value="P2">P2</option>
+                            <option value="P3">P3</option></select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sm-field__wrapper">
+                <div class="sm-field__wrapper__inside">
+                    <div class="sm-field sm-field--textarea sm-field--large">
+                        <label class="sm-field__label" for="sm-field-4uTR9Ak7Ox">Describe your problem   </label>
+                        <textarea class="sm-field__input sm-field__input--textarea" id="sm-field-4uTR9Ak7Ox" name="Comment" placeholder="Be as detailed as possible"></textarea>
+                    </div>
+                </div>
+            </div>
+            <input type="hidden" class="sm-field__input sm-field__input--hidden" id="sm-field-5L74dV3O4t" name="Created" value="x-sheetmonkey-current-date"/>
+            <input type="hidden" name="x-sheetmonkey-redirect" value="https://www.microsoft.com" />
+            <div class="sm-actions__container">
+                <button type="submit" class="sm-btn sm-btn--primary">Submit</button>
+            </div>
+        </div>
+    </form>
