--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<nav>
 		<ul>
-		  <li><a href="index.html"><img class="nav-img" src="images/home.png" alt="Home"></a></li>
+		  <li><a href="index.html"><img class="nav-img" src="images/home.png" width="126" height="100" alt="Home"></a></li>
 		  <li><a href="aboutus.html"><img class="nav-img" src="images/aboutus.png" alt="About"></a></li>
 		  <li><a href="shop.html"><img class="nav-img" src="images/shopnow.png" alt="Shop"></a></li>
 		  <li><a href="contactus.html"><img class="nav-img" src="images/contact.png" alt="Contact"></a></li>
