--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<nav>
 		<ul>
 		  <li><a href="index.html"><img class="nav-img" src="images/home.png" width="126" height="100" alt="Home"></a></li>
-		  <li><a href="aboutus.html"><img class="nav-img" src="images/aboutus.png" alt="About"></a></li>
-		  <li><a href="shop.html"><img class="nav-img" src="images/shopnow.png" alt="Shop"></a></li>
-		  <li><a href="contactus.html"><img class="nav-img" src="images/contact.png" alt="Contact"></a></li>
+		  <li><a href="aboutus.html"><img class="nav-img" src="images/aboutus.png" width="126" height="100" alt="About"></a></li>
+		  <li><a href="shop.html"><img class="nav-img" src="images/shopnow.png" width="126" height="100" alt="Shop"></a></li>
+		  <li><a href="contactus.html"><img class="nav-img" src="images/contact.png" width="126" height="100" alt="Contact"></a></li>
 		</ul>
 	  </nav>
 	
