--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  
 <h2>Our products</h2>
 
-<table style="width: 50%" class="center">
+<table style="width: 65%">
 	<tr>
     	<th>Product</th>
     	<th>Description</th>
