--- a/contactus.html
+++ b/contactus.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Glow Recipe</title>
+<link rel="icon" type="image/x-icon" href="images/gricon.webp">
+<link href="styles.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+
 <form action="https://api.sheetmonkey.io/form/nGaAXQvCr7tTx9iyCS46mq" method="post">
     <label>Your Name: <input type="text" name="Name" required /></label><br>
     <label>Your Email: <input type="email" name="Email" required /></label>
@@ -54,3 +64,5 @@
             </div>
         </div>
     </form>
+
+</body>
