--- a/submitform.html
+++ b/submitform.html
@@ -14,12 +14,16 @@
 
 <body>
 
-  <header>
-		<a href="index.html"><img src="images/home.png" width="187" height="127"/></a>
-		<a href="shop.html"><img src="images/shopnow.png" width="187" height="127"/></a>
-		<a href="aboutus.html"><img src="images/aboutus.png" width="196" height="129"/></a>
-		<a href="submitform.html"><img src="images/contact.png" width="187" height="127"/></a>
-</header>
+  <nav>
+		<ul>
+		  <li><a href="index.html"><img class="nav-img" src="images/home.png" width="126" height="100" alt="Home"></a></li>
+		  <li><a href="aboutus.html"><img class="nav-img" src="images/aboutus.png" width="126" height="100" alt="About"></a></li>
+		  <li><a href="shop.html"><img class="nav-img" src="images/shopnow.png" width="126" height="100" alt="Shop"></a></li>
+      <li><a href="submitform.html"><img class="nav-img" src="images/contact.png" width="126" height="100" alt="Shop"></a></li>
+      
+		</ul>
+	  </nav>
+
   <div class="container">
     <div class="form-wrapper">
       <div class="form-introduction">
