--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	
+	<center><div style="align-content: center; width 75%"</>
 	<nav>
 		<ul>
 		  <li><a href="index.html"><img class="nav-img" src="images/home.png" width="126" height="100" alt="Home"></a></li>
