--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<center><div style="align-content: center; width 75%"</>
+	<center><div style="align-content: center; width 75%">
 	<nav>
 		<ul>
 		  <li><a href="index.html"><img class="nav-img" src="images/home.png" width="126" height="100" alt="Home"></a></li>
@@ -51,6 +51,8 @@
 		<td> Everyone has pores, but sometimes they can feel congested and need a good deep cleanse. This curated kit has everything you need to help visibly minimize the look of pores while giving you your smoothest skin yet!</td>
 	</tr>
 </table>
+</div>
+</center>
 
 </body>
 </html>
