--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<center><div style="align-content: center; width 75%"</>
+	<center><div style="align-content: center; width 75%">
 	<nav>
 		<ul>
 		  <li><a href="index.html"><img class="nav-img" src="images/home.png" width="126" height="100" alt="Home"></a></li>
@@ -44,3 +44,6 @@
 		<td>Formulated with star ingredients like hyaluronic acid and watermelon extract, this jumbo-sized mosturizer not only plumpd and soothes skin, but also offers long-lasting hyrdation</td>
 	</tr>
 </table>
+</div>
+</center>
+</body>
