--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<center><div style="align-content: center; width 75%">
+	<center><div style="align-content: center; width: 75%">
 	<nav>
 		<ul>
 		  <li><a href="index.html"><img class="nav-img" src="images/home.png" width="126" height="100" alt="Home"></a></li>
